--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
             }
         }
         
-        function showResponse(content, type, title = '') {
+        function showResponse(content, type, title) {
             const responseContainer = document.getElementById('responseContainer');
             responseContainer.innerHTML = `
                 <div class="response-container ${type}">
