--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
 
         <div class="input-group">
             <label for="videoUrl">Video URL:</label>
-            <input type="url" id="videoUrl" placeholder="Enter TikTok, Facebook, Instagram, YouTube, or other video URL" 
+            <input type="url" id="videoUrl" placeholder="Enter TikTok, Facebook, Instagram, or YouTube video URL" 
                    value="">
         </div>
 
@@ -135,12 +135,12 @@
 
     <script>
         function detectPlatform(url) {
-            if (url.includes('tiktok.com')) return 'TikTok';
-            if (url.includes('facebook.com') || url.includes('fb.watch')) return 'Facebook';
-            if (url.includes('instagram.com')) return 'Instagram';
-            if (url.includes('youtube.com') || url.includes('youtu.be')) return 'YouTube';
-            if (url.includes('twitter.com') || url.includes('x.com')) return 'Twitter/X';
-            return 'Universal';
+            if (url.includes('tiktok.com')) return 'TikTok ✅';
+            if (url.includes('facebook.com') || url.includes('fb.watch')) return 'Facebook ✅';
+            if (url.includes('instagram.com')) return 'Instagram ✅';
+            if (url.includes('youtube.com') || url.includes('youtu.be')) return 'YouTube ✅';
+            if (url.includes('twitter.com') || url.includes('x.com')) return 'Twitter/X ❌ (Not Supported)';
+            return 'Unknown Platform ❌';
         }
 
         function showPlatformInfo(url) {
@@ -239,4 +239,4 @@
         });
     </script>
 </body>
-</html>
+    </html>
